# claude-wiki

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  pyproject.toml
.claude/skills/claude-wiki/: SKILL.md
.claude/skills/claude-wiki-compile/: SKILL.md
.claude/skills/claude-wiki-dev/: SKILL.md
.claude/skills/claude-wiki-lint/: SKILL.md
.claude/skills/claude-wiki-migrate/: SKILL.md
.claude/skills/claude-wiki-query/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
completions/: claude-wiki.bash  claude-wiki.fish  claude-wiki.zsh
docs/: index.md  plan.md
docs/adr/: 001-canonicalize-for-comparison.md  002-best-effort-rollback-for-cross-filesystem.md  003-registry-as-reconciled-cache.md  004-fail-fast-local-defensive-global.md  005-kb-directory-redesign.md  006-vault-naming-and-obsidian-graph-hygiene.md  007-no-wikilinks-to-daily-logs.md  008-keep-dataclasses-dedupe-validation.md  009-explicit-registries-replace-pkgutil.md  010-consolidate-paths-remove-lazy-migration.md  011-compile-cost-control.md  012-constrained-write-schema.md  013-advisory-fcntl-locks.md  014-freeze-layout-v2.md  015-keep-argparse.md  016-reject-mcp-server.md
docs/explanation/: architecture.md  design-principles.md  obsidian-graph-hygiene.md
docs/how-to/: configure-repo.md  customize-hooks.md  install-shell-completions.md  install.md  migrate-project-to-user-mode.md  scope-queries.md  suppress-lint-false-positives.md  upgrade-to-v1.md  use-graph.md  use-json-output.md  use-tags.md
docs/man/: claude-wiki.1
docs/reference/: ci-cd.md  cli.md  config-file.md  contributors.md  data-models.md  protocols.md  stability.md
docs/tutorials/: quickstart.md
examples/: README.md
examples/minimal-walkthrough/daily/: 2026-06-20.md
examples/minimal-walkthrough/knowledge/: log.md  minimal.md
examples/minimal-walkthrough/knowledge/concepts/: project-mode-venv.md  uv-python-toolchain.md
examples/minimal-walkthrough/knowledge/connections/: uv-and-ci-pipelines.md
scripts/: commit-msg-guard.sh  generate_completions.py
src/claude_kb/: AGENTS.md  __init__.py  cli.py  config.py  errors.py  factories.py  flush.py  global_index.py  hooks.py  interfaces.py  migration.py  models.py
src/claude_kb/commands/: __init__.py  compile.py  lint.py  query.py
src/claude_kb/hook_handlers/: __init__.py  pre_compact.py  session_end.py  session_start.py
src/claude_wiki/: AGENTS.md  __init__.py  _completions.py  catalog_utils.py  cli.py  config.py  errors.py  factories.py  flush.py  git_utils.py  global_index.py  graph_utils.py  hook_detect.py  hooks.py  interactive.py  interfaces.py  logging_setup.py  migration.py  models.py  prompt_utils.py  writer.py
src/claude_wiki/commands/: __init__.py  compile.py  graph.py  lint.py  query.py  register.py  registry.py  rename_catalog.py  status.py  tags.py
src/claude_wiki/hook_handlers/: __init__.py  pre_compact.py  session_end.py  session_start.py
tests/: conftest.py  test_cli.py  test_compile.py  test_completions.py  test_config.py  test_docs_sync.py  test_factories.py  test_flush.py  test_git_utils.py  test_global_index.py  test_graph.py  test_hook_registrar.py  test_hooks.py  test_integration.py  test_interactive.py  test_lint.py  test_migration.py  test_models.py  test_packaging.py  test_pre_compact.py  test_query.py  test_register.py  test_registry.py  test_rename_catalog.py  test_session_end.py  test_session_start.py  test_status.py  test_tags.py  test_version.py  test_writer.py
