[project]
name = "claude-wiki"
version = "0.1.0"
description = "Claude Wiki - installable hooks and CLI for a personal knowledge base"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "platformdirs>=4.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pre-commit>=3.5",
    "mdformat>=0.7",
    "mdformat-frontmatter>=0.4",
    "mdformat-gfm>=0.3",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/mrrobot0985/claude-wiki"
Repository = "https://github.com/mrrobot0985/claude-wiki"

[project.scripts]
claude-wiki = "claude_wiki.cli:main"
claude-wiki-hook = "claude_wiki.hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false