[project]
name = "claude-wiki"
version = "0.13.1"
description = "Claude Wiki - installable hooks and CLI for a personal knowledge base"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "platformdirs>=4.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pre-commit>=3.5",
    "mdformat>=0.7",
    "mdformat-frontmatter>=0.4",
    "mdformat-gfm>=0.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "pypiserver>=2.0",
]

[project.urls]
Homepage = "https://github.com/mrrobot0985/claude-wiki"
Repository = "https://github.com/mrrobot0985/claude-wiki"
Funding = "https://github.com/sponsors/mrrobot0985"
Documentation = "https://github.com/mrrobot0985/claude-wiki#documentation"
Changelog = "https://github.com/mrrobot0985/claude-wiki/blob/main/CHANGELOG.md"
Issues = "https://github.com/mrrobot0985/claude-wiki/issues"

[project.scripts]
claude-wiki = "claude_wiki.cli:main"
claude-wiki-hook = "claude_wiki.hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_wiki"]

[tool.hatch.build.targets.wheel.force-include]
"completions/claude-wiki.bash" = "claude_wiki/data/completions/claude-wiki.bash"
"completions/claude-wiki.zsh" = "claude_wiki/data/completions/claude-wiki.zsh"
"completions/claude-wiki.fish" = "claude_wiki/data/completions/claude-wiki.fish"
"docs/man/claude-wiki.1" = "claude_wiki/data/man/claude-wiki.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
